# Weaver

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.sh  LICENSE.txt  README  README.md  README.rst
Weaver_SV/: CMakeLists.txt  README.md
Weaver_SV/data/: GAP_20140416  KI  ManualGap  ManualGap_noY  NB  ST  SUM  SegDup_pair  addNormErr2BlackList.pl  errNorm  hg19_SV_blacklist_2014
Weaver_SV/src/: Bam_distri.cpp  Makefile  Pair_bam.cpp  combineSuperPair.cpp  superPair.cpp
data/: CENT  GAP_20140416_num  wgEncodeCrgMapabilityAlign100mer.bd  wgEncodeCrgMapabilityAlign100mer_number.bd
external_bin/: bedtools  bwa  samtools  wigToBigWig
inc/: LBP.h  LBP_lite.h  class.h  distt.h  interval.h  parameters.h  partition.h  ploidy.h  read.h  structure.h
mis/: ABSO_bed.pl
src/: .nfs00000000012aae1f0000000f  LBP.cpp  LBP_lite.cpp  LBPback  Makefile  SNPseg.cpp  class.cpp  distt.cpp  getGC.cpp  interval.cpp  liteFlag.cpp  main.cpp  main_lite.cpp  newParse_memfix.cpp  new_ploidy.cpp  partition.cpp  ploidy.cpp  read.cpp  solo_ploidy.cpp
